--- a/Project-Gallery/json/ixd_projects.json
+++ b/Project-Gallery/json/ixd_projects.json
@@ -27,7 +27,7 @@
         "Timestamp": "Sat Mar 18 2017 12:54:04 GMT-0400 (EDT)",
         "projID": "ABC2",
         "name": "Samantha Sadasivan",
-        "Project": "Bevy - Aboriginal Support Group Service",
+        "Project": "Bevy",
         "Format": [
             "Website",
             "App",
@@ -39,7 +39,7 @@
             "UX Design",
             "Service Design"
         ],
-        "Description": "Bevy is a service designed for Canadian Aboriginal students to learn about their heritage whilst staying mindful to who they are as an individual. Bevy was designed to promote mental health and Aboriginal culture. ",
+        "Description": "Bevy is a service designed for Canadian Aboriginal students to learn about their heritage whilst staying.",
         "Situation": "Aboriginal students and mental health has become a large issue for Canadas North and there are multiple factors that contribute to this problem.",
         "Problem": "How might we support Aboriginal students find their identity and self-esteem",
         "Process": [
