--- a/Project-Gallery/json/ixd_projects.json
+++ b/Project-Gallery/json/ixd_projects.json
@@ -39,7 +39,7 @@
             "UX Design",
             "Service Design"
         ],
-        "Description": "Bevy is a service designed for Canadian Aboriginal students to learn about their heritage whilst staying.",
+        "Description": "Bevy is a service designed for Canadian Aboriginal students to learn",
         "Situation": "Aboriginal students and mental health has become a large issue for Canadas North and there are multiple factors that contribute to this problem.",
         "Problem": "How might we support Aboriginal students find their identity and self-esteem",
         "Process": [
