--- a/Project-Gallery/json/ixd_projects_4.json
+++ b/Project-Gallery/json/ixd_projects_4.json
@@ -428,6 +428,7 @@
       "projID" : "t2tk",
       "name" : "Rico Suico, Yurria Byun",
       "Project" : "Zen Butterflies",
+      "headshot" : "Rico.png",
       "Format" : 
       [
         "Installation",
